# avr-keyboard

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  keyboard.c  keyboard.h  main.c  protocol.c  state.h  usart.c  usart.h
input/: Makefile  main.c  usart.c  usart.h
keyboard/: base.c  base.h  label.c  label.h  protocol.c  protocol.h  scan.c  scan.h  state.c  state.h
output/: Makefile  main.c  usart.c  usart.h
output/keyboard/: base.c  protocol.c  protocol.h  scan.c  state.c  state.h
output/usbdrv/: usbconfig.h
usbdrv/: usbconfig.h
